--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,14 +1,129 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar color= "primary">
     <ion-title>
-      Ionic Blank
+      BMW Survey
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <div class="ion-padding">
-    The world is your oyster.
-    <p>If you get lost, the <a target="_blank" rel="noopener" href="https://ionicframework.com/docs/">docs</a> will be your guide.</p>
-  </div>
+  <ion-list padding *ngIf="show">
+      <ion-card color= "primary">
+          <div class="ion-padding">
+              <ion-list-header>
+                  How old are you?
+              </ion-list-header>
+            <ion-item>
+              <ion-range [(ngModel)]="results.age" min="0" max="100" step="1" debounce= 1000 snaps mode="ios" pin="true">
+                <ion-icon slot="start" size="small"  name="egg"></ion-icon>
+                <ion-icon slot="end"  name="man" size="large"></ion-icon>
+              </ion-range>
+            </ion-item>
+            <ion-list-header>
+                What is your gender?
+            </ion-list-header>
+            <ion-item>
+              <ion-label>Select One</ion-label>
+                <ion-select placeholder="Select One" slot="end" interface="popover"  [(ngModel)]="results.gender" (ionChange)= "checkAge()">
+                  <ion-select-option value="F">Female</ion-select-option>
+                  <ion-select-option value="M">Male</ion-select-option>
+                  <ion-select-option value="O">Other</ion-select-option>
+                </ion-select>
+              </ion-item>
+        
+              <ion-radio-group (ionChange)='radioGroupLicence($event)'>
+                  <ion-list-header>
+                      Do you own a car driving license?
+                  </ion-list-header>
+              
+                  <ion-item>
+                    <ion-label>Yes</ion-label>
+                    <ion-radio value="true"></ion-radio>
+                  </ion-item>
+              
+                  <ion-item>
+                    <ion-label>No, I prefer using other transport</ion-label>
+                    <ion-radio value="false"></ion-radio>
+                  </ion-item>
+              </ion-radio-group>
+        <div *ngIf="isValid">
+              <ion-radio-group (ionChange)='radioGroupFirstCar($event)'>
+                  <ion-list-header>
+                      Is this your first car?
+                  </ion-list-header>
+              
+                  <ion-item>
+                    <ion-label>Yes</ion-label>
+                    <ion-radio value="true"></ion-radio>
+                  </ion-item>
+              
+                  <ion-item>
+                    <ion-label>No</ion-label>
+                    <ion-radio value="false"></ion-radio>
+                  </ion-item>
+              </ion-radio-group>
+            </div>
+              <ion-radio-group (ionChange)='radioGroupDriveTrain($event)'>
+                  <ion-list-header>
+                      Which drive train do you prefer?
+                  </ion-list-header>
+              
+                  <ion-item>
+                    <ion-label>FWD</ion-label>
+                    <ion-radio value="FWD"></ion-radio>
+                  </ion-item>
+              
+                  <ion-item>
+                    <ion-label>RWD</ion-label>
+                    <ion-radio value="RWD"></ion-radio>
+                  </ion-item>
+        
+                  <ion-item>
+                      <ion-label>I don't know</ion-label>
+                      <ion-radio value="IDK"></ion-radio>
+                    </ion-item>
+              </ion-radio-group>
+        
+              <ion-radio-group (ionChange)='radioGroupDrifting($event)'>
+                  <ion-list-header>
+                      Do you care about drifting?
+                  </ion-list-header>
+              
+                  <ion-item>
+                    <ion-label>Yes</ion-label>
+                    <ion-radio value="true"></ion-radio>
+                  </ion-item>
+              
+                  <ion-item>
+                    <ion-label>No</ion-label>
+                    <ion-radio value="false"></ion-radio>
+                  </ion-item>
+
+              </ion-radio-group>
+              <ion-list-header>
+                  How many BMW's do you have?
+              </ion-list-header> 
+              <ion-item>
+                <ion-range [(ngModel)]="results.amount" min="0" max="20" debounce= 1000 step="1" snaps mode="ios" pin="true" (ionChange)= "populateModels()">
+                  <ion-icon slot="start" size="small"  name="logo-model-s"></ion-icon>
+                  <ion-icon slot="end"  name="logo-model-s" size="large"></ion-icon>
+                </ion-range>
+              </ion-item>
+        
+              <ion-list-header *ngIf="results.amount > 0">
+                 Which BMW's did you drive?
+              </ion-list-header> 
+              <ion-item *ngFor="let item of results.models; let i = index">
+                  <ion-label position="floating">Model {{i + 1}}:</ion-label>
+                  <ion-input [(ngModel)]="item.model" (ionBlur)="checkValid(i)"></ion-input>
+              </ion-item>
+         </div>
+        
+        
+          </ion-card>
+          <ion-button expand="block" fill="outline" [disabled]= "results.age == 0" (click)= "submit()">Submit</ion-button>
+
+        
+  </ion-list>
+ 
 </ion-content>
